# beachvar-device

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
admin-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-frontend/src/: App.vue  main.ts
admin-frontend/src/api/: client.ts
admin-frontend/src/components/: ButtonCard.vue  ButtonModal.vue  CameraCard.vue  CameraLogsModal.vue  CameraModal.vue  HlsPlayer.vue  PlayerModal.vue  StatsCard.vue
admin-frontend/src/styles/: index.css
admin-frontend/src/types/: index.ts
admin-frontend/src/views/: DashboardView.vue
src/: __init__.py  sentry.py
src/gateway/: __init__.py  client.py  messages.py
src/gpio/: __init__.py  handler.py
src/http/: __init__.py  app.py  server.py
src/http/routes/: __init__.py  admin.py  buttons.py  cameras.py  courts.py  device_logs.py  hls.py  logs.py  streams.py
src/http/static/: index.html
src/streaming/: __init__.py  camera.py  device_logs.py  logs.py  manager.py
src/tunnel/: __init__.py  manager.py
