[project]
name = "beachvar-device"
version = "0.1.0"
description = "BeachVar Device - Raspberry Pi client for beach volleyball recording"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "litestar>=2.14.0",
    "uvicorn[standard]>=0.34.0",
    "psutil>=5.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]
